<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aaron.metricconversion.MainActivity">

    <EditText
        android:id="@+id/inches"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/initialValue"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/feet"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="115dp"
        android:ems="10"
        android:hint="@string/initialValue"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inches"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/pounds"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="115dp"
        android:ems="10"
        android:hint="@string/initialValue"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feet"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/faherenheit"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="115dp"
        android:ems="10"
        android:hint="@string/initialValue"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pounds"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/meters"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="115dp"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cm"
        android:gravity="end"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/cm"
        android:layout_width="175dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:textAlignment="viewEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"
        android:gravity="end" />

    <TextView
        android:id="@+id/kilos"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="115dp"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meters"
        android:layout_marginRight="8dp"
        android:gravity="end" />

    <TextView
        android:id="@+id/celcius"
        android:layout_width="140dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="115dp"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kilos"
        android:layout_marginRight="8dp"
        android:gravity="end" />

    <Button
        android:id="@+id/convert_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="60dp"
        android:text="@string/convertBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="160dp" />

    <Button
        android:id="@+id/convert_btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="216dp"
        android:text="@string/convertBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="160dp" />

    <Button
        android:id="@+id/convert_btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="536dp"
        android:text="@string/convertBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="160dp" />

    <Button
        android:id="@+id/convert_btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="376dp"
        android:text="@string/convertBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="160dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/inches"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inches"
        android:layout_marginLeft="48dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/feet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feet"
        android:layout_marginLeft="48dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/pounds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pounds"
        android:layout_marginLeft="48dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/fahrenheit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faherenheit"
        android:layout_marginLeft="48dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/cm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cm"
        android:layout_marginRight="44dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/meters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meters"
        android:layout_marginRight="44dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/kilos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kilos"
        android:layout_marginRight="44dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/celcius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celcius"
        android:layout_marginRight="44dp" />
</android.support.constraint.ConstraintLayout>
